# advertisement-info

./: .gitignore  README.md  cloudbuild.yaml  main.py  pyproject.toml  requirements.txt
src/: config.py  main.py
src/adapters/: api_client.py
src/adapters/marketplaces/: ozon.py
src/application/: events.py  model.py  schema.py  usecase.py
src/application/interfaces/: api_client.py  event_publisher.py
src/utils/: event_publisher.py
