[tool.poetry]
name = "advertisement-info"
version = "0.1.0"
description = ""
authors = ["Shmupreal <nnuzen0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
aiohttp = "^3.11.11"
google-cloud-pubsub = "^2.27.3"
google-cloud-logging = "^3.11.3"
pydantic-settings = "^2.7.1"
functions-framework = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
